--- a/app/globals.css
+++ b/app/globals.css
@@ -1,78 +1,78 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
-
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+@import url('https://fonts.googleapis.com/css2?family=GFS+Didot&family=Special+Elite&display=swap');
+.imgCarousel{
+  width: 100% !important;
+  height:auto;
+  object-fit: cover;
+  border-radius: 10px;
+  filter: grayscale(10);
+  transition:filter 0.5s ease;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.filter{
+  filter: grayscale(10) !important;
+  color: green !important;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+.imgCarousel:hover{
+  filter: grayscale(0);
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.imgAbout{
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 500px;
+  filter: blur(50px);
+  transition:filter 1s ease;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+
+.imgAbout:hover{
+  filter: invert(10) ;
+  filter: blur(0px);
+}
+
+.aboutText{
+  color: white;
+  font-size: 1.5vw;
+}
+
+.carosello{
+  box-shadow: rgba(214, 214, 214, 0.13) 0px 4px 16px, rgba(255, 255, 255, 0.05) 0px 8px 32px;
+  border-radius: 10px;
+}
+
+.name{
+  font-size: 20vw;
+  text-align: end;
+  line-height: 15vw;
+  font-family: 'Special Elite';
+  color: white;
+}
+
+.myWorks{
+  font-size: 8vw;
+  font-family: 'Special Elite';
+  color: white;
+  border-right:2px solid white
+}
+.about{
+  font-size: 8vw;
+  font-family: 'Special Elite';
+  color: white;
+  border-top:2px solid white;
+}
+
+.contacts h1{
+  font-size: 8vw;
+  font-family: 'Special Elite';
+  color: white;
+  border-top:2px solid white;
+}
+
+.contacts p{
+  font-size: 1.5vw;
 }
 
 * {
@@ -88,22 +88,37 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+background-color: black !important;
 }
 
 a {
-  color: inherit;
+  color: white !important;
   text-decoration: none;
+  font-family: 'Special Elite';
+}
+
+p{
+  font-family: 'Special Elite';
+  color: white;
+
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+
+
+
+@media (max-width: 768px) {
+h1{font-size: 10vw !important;
+}
+.aboutText{
+  color: white;
+  font-size: 3.4vw;
+}
+.contacts p{
+  font-size: 3.4vw;
+}
 }
